# dell-isilon-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  openapi.json  openapi_v18_only.json  overview.json  pyproject.toml  requirements-mcp.txt  requirements.txt  setup.py  verify_api_coverage.py
dev/: convert_papi_to_openapi.py  fetch_openapi_batch.py  fetch_powerscale_openapi.py  filter_to_v18_only.py
isilon_mcp/: __init__.py  api_client.py  config.py  exceptions.py  http_server.py  logging_config.py  main.py  server.py  tool_generator.py
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_tool_generator.py
